# TypeFree

./: .gitignore  README.md  package.json
.github/workflows/: build-windows.yml  release.yml
src/: index.html  overlay.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  doubao_asr.rs  doubao_cdp.rs  doubao_launcher.rs  fn_key.rs  keyboard.rs  lib.rs  main.rs  permissions.rs  resample.rs  tray.rs
src-tauri/src/overlay/: mod.rs  panel.rs
